--- a/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
@@ -8,8 +8,8 @@
 </div>-->
 
 <fm-market-overview funds="fmMarket.funds"></fm-market-overview>
-<fm-bulletin-slider></fm-bulletin-slider>
-<fm-newsfeed news="fmMarket.news"></fm-newsfeed>
+<!--<fm-bulletin-slider></fm-bulletin-slider>-->
+<fm-newsfeed news="fmMarket.latestNews"></fm-newsfeed>
 
 
 
