--- a/src/Sandbox/client/src/components/directives/fm-fund-gallery-directive/fm-fund-gallery-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-fund-gallery-directive/fm-fund-gallery-style.scss
@@ -19,6 +19,7 @@
     margin-bottom: $layout-modifier-lg;
     transition: $animation-transition-long ease-in background-color;
 
+    /*
     &.ng-enter, &.ng-leave {
       transition: $animation-transition-long ease-in all;
       position: relative;
@@ -33,7 +34,7 @@
     &.ng-leave.ng-leave-active, &.ng-enter {
       top: 200px;
       opacity: 0;
-    }
+    }*/
 
 
     .fm-fund-card-container {
