--- a/src/Sandbox/client/src/components/controllers/fm-news-controller/fm-news-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-news-controller/fm-news-view.html
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-xs-12">
         <ul>
-          <li ng-repeat="newsItem in fmNews.newsItems">{{newsItem.Title}}</li>
+          <li ng-repeat="newsItem in fmNews.newsItems"><a ui-sref="Nyheter/{{newsItem.NewsItemId}}">{{newsItem.Title}}</a></li>
         </ul>
       </div>
     </div>
