--- a/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-view.html
+++ b/src/Sandbox/client/src/components/directives/fm-newsfeed-directive/fm-newsfeed-view.html
@@ -25,7 +25,7 @@
       </article>
     </div>
     <div class="row">
-      <button class="fm-button">Visa alla</button>
+      <a href="" ui-sref="Nyheter" class="fm-button">Visa alla</a>
     </div>
 
   </div>
