Switched out SwiperSlider for Owl.Carousel2

--- a/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
+++ b/src/Sandbox/client/src/components/controllers/fm-market-controller/fm-market-view.html
@@ -1,5 +1,5 @@
 ﻿<fm-market-overview funds="fmMarket.funds"></fm-market-overview>
-<!--<fm-bulletin-slider></fm-bulletin-slider>-->
+<fm-bulletin-slider></fm-bulletin-slider>
 <fm-newsfeed news="fmMarket.latestNews"></fm-newsfeed>
 
 
