--- a/src/Sandbox/client/src/components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss
+++ b/src/Sandbox/client/src/components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss
@@ -2,6 +2,25 @@
   background-color: $color-dark-grey;
   padding: $layout-modifier-sm 0;
   position: relative;
+  text-align: center;
+
+  .fm-bulletin-slider-text {
+    color: $color-white;
+    margin: 0 auto;
+    padding: 0;
+    font-size: $font-size-base;
+
+    @media(min-width: $screen-sm) {
+      font-size: $font-size-h4;
+    }
+  }
+}
+
+
+/*.fm-bulletin-slider {
+  background-color: $color-dark-grey;
+  padding: $layout-modifier-sm 0;
+  position: relative;
 
   .swiper-container {
     width: 100%;
@@ -22,4 +41,4 @@
       }
     }
   }
-}
+}*/
