--- a/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
+++ b/src/Sandbox/wwwroot/views/fm-fund-gallery-view.html
@@ -1,5 +1,5 @@
   <!-- fm-card -->
-<article ng-repeat="fund in funds" class="col-xs-12 col-sm-6 col-lg-4 fm-fund-wrapper">
+<article ng-repeat="fund in funds" class="col-xs-12 col-sm-6 col-md-4 col-lg-3 fm-fund-wrapper">
 
   <!-- fm-card-container -->
   <div class="fm-fund-card-container">
