--- a/src/Sandbox/wwwroot/views/fm-market-view.html
+++ b/src/Sandbox/wwwroot/views/fm-market-view.html
@@ -1,6 +1,19 @@
 <fm-market-overview funds="fmMarket.funds"></fm-market-overview>
 <fm-bulletin-slider></fm-bulletin-slider>
-<fm-newsfeed news="fmMarket.latestNews"></fm-newsfeed>
+
+
+<section class="container-fluid section-padding background-dark">
+  <div class="col-sm-10 col-sm-offset-1">
+    <h2 class="text-center fm-news-title">Nyheter</h2>
+    <p class="text-center fm-news-subtitle">Alohamora wand elf parchment, Wingardium Leviosa hippogriff, house dementors betrayal.</p>
+
+    <div class="row">
+      <fm-newsfeed news="fmMarket.latestNews"></fm-newsfeed>
+    </div>
+
+  </div>
+</section>
+
 
 
 
