--- a/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
+++ b/src/Sandbox/client/src/scss/base_imports/variable_imports/_layout-variables.scss
@@ -11,4 +11,8 @@ $layout-modifier-lg: $layout-modifier-sm * 2;
 $layout-modifier-xl: $layout-modifier-sm * 6;
 
 // Padding
-$layout-section-padding: 12rem;
+$layout-section-padding: 10rem;
+
+// Border-radius
+$border-radius-sm: 0.4rem;
+$border-radius-lg: 100%;
