--- a/src/Sandbox/client/src/scss/style.scss
+++ b/src/Sandbox/client/src/scss/style.scss
@@ -18,6 +18,7 @@
 // Base styles.
 @import './base_imports/_variables.scss';
 @import './base_imports/_global.scss';
+@import './base_imports/_icons.scss';
 @import './base_imports/_typography.scss';
 @import './base_imports/_buttons.scss';
 @import './base_imports/_tables.scss';
@@ -25,14 +26,16 @@
 
 // Component styles.
 /* inject:scss */
+@import "../components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss";
 @import "../components/controllers/fm-register-controller/fm-register-style.scss";
-@import "../components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss";
 @import "../components/directives/fm-footer-directive/fm-footer-style.scss";
-@import "../components/directives/fm-hero-directive/fm-hero-style.scss";
+@import "../components/directives/fm-bulletin-slider-directive/fm-bulletin-slider-style.scss";
 @import "../components/directives/fm-fund-gallery-directive/fm-fund-gallery-style.scss";
+@import "../components/directives/fm-hero-directive/fm-hero-style.scss";
 @import "../components/directives/fm-market-map-directive/fm-market-map-style.scss";
-@import "../components/directives/fm-newsfeed-directive/fm-newsfeed-style.scss";
 @import "../components/directives/fm-market-overview-directive/fm-market-overview-style.scss";
 @import "../components/directives/fm-navbar-directive/fm-navbar-style.scss";
+@import "../components/directives/fm-newsfeed-directive/fm-newsfeed-style.scss";
+@import "../components/directives/fm-step-progressbar/fm-step-progressbar-style.scss";
 /* endinject */
 
