--- a/src/Sandbox/wwwroot/views/fm-newsfeed-view.html
+++ b/src/Sandbox/wwwroot/views/fm-newsfeed-view.html
@@ -18,6 +18,6 @@
   </div>
 </article>
 
-<div style="border: 1px red solid; clear: both;">
+<div>
   <a href="" ui-sref="Nyheter" class="fm-button fm-news-button">Visa alla</a>
 </div>
