--- a/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss
+++ b/src/Sandbox/client/src/components/controllers/fm-portfolio-generator-controller/fm-portfolio-generator-style.scss
@@ -4,19 +4,124 @@
   &.show-step {
     display: block;
   }
-} 
+}
+
+.step1 {
+
+  .fund-generator-user-data {
+    text-align: center;
+    font-size: 3.7rem;
+    line-height: 8rem;
+    font-weight: $font-weight-light;
+
+    .user-input {
+      display: inline-block;
+      position: relative;
+      white-space: nowrap;
+
+      .input-error-message {
+        display: inline-block;
+        position: absolute;
+        bottom: -1 * $layout-modifier-sm / 2;
+        left: 0;
+        right: 0;
+        width: auto;
+        margin: auto;
+        font-size: 1.2rem;
+        font-weight: $font-weight-semibold;
+        letter-spacing: 0.1rem;
+        line-height: normal;
+        color: $color-red;
+        opacity: 0;
+      }
+
+      input {
+        display: inline-block;
+        text-align: center;
+        color: $color-accent;
+        padding: 0;
+        background-color: transparent;
+        font-size: inherit;
+        line-height: normal;
+        font-weight: $font-weight-light;
+        border-style: solid;
+        border-width: 0 0 1px 0;
+        border-color: $color-text-primary-highlight;
+        transition: all .3s ease-in-out;
+        width: 20rem;
+
+        &:hover {
+          border-color: $color-text-primary;
+        }
+
+        &:focus {
+          outline: 0;
+        }
+
+        &.input-short {
+          width: 5rem;
+        }
+
+        &.input-error {
+          color: $color-red;
+          border-color: $color-red;
+
+          &:hover, &:focus, &:active {
+            border-color: $color-red !important;
+            outline-color: $color-red !important;
+          }
+        }
+
+        &::-webkit-inner-spin-button, &::-webkit-outer-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+      }
+    }
+  }
+
+  .fm-button {
+    display: block;
+    margin: 0 auto;
+  }
+}
+
+
+.fund-package-panel-header {
+  background-color: $color-accent;
+  display: flex;
+  align-items: center;
+  padding: $layout-modifier-sm;
+  border-top-left-radius: $border-radius-sm;
+  border-top-right-radius: $border-radius-sm;
+
+  p {
+    text-transform: capitalize;
+    font-size: 1.8rem;
+    color: $color-white;
+    line-height: 1.8rem;
+    margin: 0;
+    padding: 0;
+  }
+}
 
 .fund-package {
   border: 1px $color-light-grey-shade solid;
-  border-radius: 0.4rem;
+  border-radius: $border-radius-sm;
   margin-bottom: $layout-modifier-sm;
   background-color: $color-white;
   overflow: hidden;
 
+  &.no-border-top {
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+    border-top: 0;
+  }
+
   .fund-package-header {
     display: flex;
     align-items: center;
-    padding: $layout-modifier-sm/2;
+    padding: $layout-modifier-sm / 2;
 
     &:hover {
       cursor: pointer;
